crates/rome_cli/tests/snapshots/main_commands_check/check_stdin_apply_unsafe_successfully.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
import 'zod'; import 'lodash'; function f() {return{}} class Foo { constructor() {} }
```

# Emitted Messages

```block
import "lodash";
import "zod";
function f() {
	return {};
}
class Foo {}

```


