crates/rome_cli/tests/snapshots/main_commands_check/deprecated_suppression_comment.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
// rome-ignore lint(suspicious/noDoubleEquals): test
a == b;
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:1:1 suppressions/deprecatedSyntax  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Suppression is using a deprecated syntax
  
  > 1 │ // rome-ignore lint(suspicious/noDoubleEquals): test
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    2 │ a == b;
  
  i Safe fix: Rewrite suppression to use the newer syntax
  
    1   │ - //·rome-ignore·lint(suspicious/noDoubleEquals):·test
      1 │ + //·rome-ignore·lint/suspicious/noDoubleEquals:·test
    2 2 │   a == b;
  

```

```block
file.js organizeImports ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Import statements could be sorted:
  
    1   │ - //·rome-ignore·lint(suspicious/noDoubleEquals):·test
      1 │ + //·rome-ignore·lint/suspicious/noDoubleEquals:·test
    2 2 │   a == b;
  

```

```block
file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Formatter would have printed the following content:
  
    1 1 │   // rome-ignore lint(suspicious/noDoubleEquals): test
    2   │ - a·==·b;
      2 │ + a·==·b;
      3 │ + 
  

```

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  

```

```block
Checked 1 file(s) in <TIME>
```


