crates/rome_cli/tests/snapshots/main_commands_check/files_max_size_parse_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 223
expression: content
---
## `check.js`

```js
statement1();
statement2();
```

# Termination Message

```block
failed to parse argument '--files-max-size': failed to parse '-1': invalid digit found in string
```


